2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--license-abbreviation-list): Rename.
	Was `epackage--info-mode-license-list'.
	(epackage-devel-compose-package-dir): Check lib-* package.
	(epackage-package-name-library-p): Correct function.
	(epackage-autoload-write-loaddefs-clean): New. SERIOUS ERROR
	FIXED. All generated autoload files in
	epackage/*-epkg-0loaddefs.el incorrectly contained relative apth
	names to file.
	(epackage-files-recursive-lisp): Correct returned dir list.
	(epackage-autoload-generate-loaddefs-dir): Add RECURSIVE arg.
	(epackage-autoload-write-loaddefs-clean): Simplify.
	(epackage-devel-generate-examples): Correct arg DIR handling.
	(epackage-devel-generate-compile-main): Correct arg DIR handling.
	(epackage-devel-generate-uninstall): Correct arg DIR handling.
	(epackage-error-if-not-directory): New.
	(epackage-devel-compose-package-dir): Always select some *.el
	file for epackage/info base.
	(epackage-batch-devel-compose-package-dir): Check directory.

2012-01-03 Wed  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-date): New.
	(epackage-lint-extra-buffer-main): Add Emacs version to lint log.
	Correct extra checks.
	(epackage-lint-extra-buffer-run-lm): Adjust pure numric message
	to warning.
	(epackage-lint-extra-checkdoc-advice): Remove.
	(epackage-lint-extra-buffer-checkdoc-cleanup): New.
	(epackage-batch-devel-lint-lisp): Add directoried to load-path.
	(epackage-with-load-path-recursive): New.
	(epackage-byte-compile-package-guess): Simplify.

2012-01-03 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (top level): standardize headers.
	(epackage-mail-macro): Emacs 24 fix. Turn on `message-mode'.
	(epackage-lint-extra-file): New defalias.
	(epackage-lint-extra-buffer-main): New defalias.

2012-01-02 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-batch-devel-lint-lisp): New.

2012-01-02 Mon  Jari Aalto  <jari.aalto@cante.net>
