@@ -1,3 +1,7 @@
+2012-01-05 Thu  Jari Aalto  <jari.aalto@cante.net>
+
+	* epackage.el (epackage-lint-extra-buffer-run-other-defcustom): New.
+
 2012-01-04 Wed  Jari Aalto  <jari.aalto@cante.net>
 
 	* epackage.el (epackage--license-abbreviation-list): Rename.
